--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,6 @@ allprojects {
     }
 }
 
-
-ext {
-    // Sdk and tools
-    minSdkVersion = 16
-    targetSdkVersion = 28
-    compileSdkVersion = 28
-
-    sourceCompatibilityVersion = JavaVersion.VERSION_1_8
-    targetCompatibilityVersion = JavaVersion.VERSION_1_8
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
