--- a/extras/PullToRefreshListFragment/src/main/AndroidManifest.xml
+++ b/extras/PullToRefreshListFragment/src/main/AndroidManifest.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.handmark.pulltorefresh.extras.listfragment"
-    android:versionCode="2110"
-    android:versionName="2.1.1" >
+<manifest package="com.handmark.pulltorefresh.extras.listfragment">
 
     <application />
 
