--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion "$rootProject.compileSdkVersion".toInteger()
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion "$rootProject.minSdkVersion".toInteger()
-        targetSdkVersion "$rootProject.targetSdkVersion".toInteger()
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
